--- a/.github/workflows/ci_includes_e2e_test.yaml
+++ b/.github/workflows/ci_includes_e2e_test.yaml
@@ -11,6 +11,8 @@ jobs:
 #    name: Run all tests and organize all test reports
     if: ${{ !contains(github.event.pull_request.labels.*.name, 'dependencies') }}
     uses: ./.github/workflows/rw_run_all_test_and_record.yaml
+    with:
+      run_e2e: true
     secrets:
       e2e_test_slack_bot_token: ${{ secrets.SLACK_BOT_TOKEN }}
       codecov_token: ${{ secrets.CODECOV_TOKEN }}
