✏️ Fix the error about it cannot get the secret value at the if-condition in the GA config.

--- a/.github/workflows/rw_build_and_test.yaml
+++ b/.github/workflows/rw_build_and_test.yaml
@@ -2,6 +2,12 @@ name: Run test and organize test coverage reports
 
 on:
   workflow_call:
+    inputs:
+      run_e2e:
+        description: "The testing type. In generally, it only has 2 options: 'unit-test' and 'integration-test'."
+        type: boolean
+        required: false
+        default: false
     secrets:
       e2e_test_slack_bot_token:
         description: "Set the Slack bot token for end-to-end test."
@@ -22,7 +28,7 @@ jobs:
 
   prep_e2e-test:
 #    name: Prepare all end-to-end test items
-    if: ${{ secrets.e2e_test_slack_bot_token != '' }}
+    if: ${{ inputs.run_e2e == true }}
     uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_get_tests.yaml@v7.3
     with:
       shell_arg: test/e2e_test/
