✏️ Don't use strict mode to check right now.

--- a/.github/workflows/validate_slack_event_types.yml
+++ b/.github/workflows/validate_slack_event_types.yml
@@ -31,4 +31,5 @@ jobs:
 
       - name: Run Slack event-type validator
         run: |
-          uv run python ./scripts/ci/validate_slack_event_types.py --validate --strict
+          uv run python ./scripts/ci/validate_slack_event_types.py --validate
+#          uv run python ./scripts/ci/validate_slack_event_types.py --validate --strict
