--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ slack-events-server = "slack_mcp.slack_server:main"
 dev = [
     "pytest>=8.1.1,<9",
     "pytest-cov>=5.0.0,<6",
-    "coverage~=6.2",
+    "coverage>=7.9.2,<8",
     "pytest-rerunfailures>=14.0,<15",
     "aiohttp>=3.12.13",
     "pytest-asyncio>=0.23.0,<1",
