--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,15 +52,15 @@ slack-events-server = "slack_mcp.slack_server:main"
 
 [dependency-groups]
 dev = [
-    "pytest>=8.1.1,<9",
-    "pytest-cov>=5.0.0,<6",
+    "pytest>=8.4.1,<9",
+    "pytest-cov>=6.2.1,<7",
     "coverage>=7.9.2,<8",
-    "pytest-rerunfailures>=14.0,<15",
+    "pytest-rerunfailures>=15.1,<16",
     "aiohttp>=3.12.13",
-    "pytest-asyncio>=0.23.0,<1",
+    "pytest-asyncio>=1.0.0,<2",
     "python-dotenv>=1.0.1,<2",
     "httpx>=0.26.0", # For FastAPI testing
-    "pytest-mock>=3.14.1",
+    "pytest-mock>=3.14.1,<4",
 ]
 pre-commit-ci = [
     "pre-commit>=3.5.0,<4",
