--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,10 +7,13 @@ sonar.projectName=slack-mcp-server
 sonar.projectVersion=0.0.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+sonar.projectBaseDir=./
 sonar.sources=slack_mcp/
+sonar.tests=test/
 
 # Python test coverage settings
 sonar.python.coverage.reportPaths=coverage*.xml
+#sonar.coverage.python.reportPaths=coverage*.xml
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
