--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,8 +12,8 @@ sonar.sources=slack_mcp/
 sonar.tests=test/
 
 # Python test coverage settings
-#sonar.python.coverage.reportPaths=coverage*.xml
-sonar.coverage.python.reportPaths=coverage*.xml
+sonar.python.coverage.reportPaths=coverage*.xml
+#sonar.coverage.python.reportPaths=coverage*.xml
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
