Revert "✏️ Adjust the regular expression of the test coverage report to be more flexible."
This reverts commit b328956be0c20531b9e28b1b4dac765d27a45a10.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,7 +12,7 @@ sonar.sources=slack_mcp/
 sonar.tests=test/
 
 # Python test coverage settings
-sonar.python.coverage.reportPaths=*coverage*.xml
+sonar.python.coverage.reportPaths=coverage*.xml
 #sonar.coverage.python.reportPaths=coverage*.xml
 
 # Encoding of the source code. Default is default system encoding
