✏️ Adjust the path settings for the SonarQube.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,8 +8,8 @@ sonar.projectVersion=0.0.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.projectBaseDir=./
-sonar.sources=slack_mcp/
-sonar.tests=test/
+sonar.sources=./slack_mcp/
+sonar.tests=./test/
 
 # Python test coverage settings
 sonar.python.coverage.reportPaths=coverage*.xml
