--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,6 +12,8 @@ sonar.sources=./slack_mcp/
 sonar.tests=./test/
 
 # Python test coverage settings
+sonar.python.file.suffixes=py
+sonar.python.version=3.12,3.13
 sonar.python.coverage.reportPaths=coverage*.xml
 #sonar.coverage.python.reportPaths=coverage*.xml
 
