--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,8 @@ sonar.host.url=https://sonarcloud.io
 sonar.projectKey=Chisanan232_slack-mcp-server
 sonar.organization=chisanan232
 
+sonar.issues.defaultAssigneeLogin=Bryant
+
 # This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=slack-mcp-server
 sonar.projectVersion=0.0.0
