➕ Add debug logs for troubleshooting.

--- a/.github/workflows/rw_sonarqube_scan.yaml
+++ b/.github/workflows/rw_sonarqube_scan.yaml
@@ -58,6 +58,13 @@ jobs:
           name: ${{ inputs.test_type }}_coverage_xml_report
           path: ${{ inputs.download_path }}
 
+      - name: Just debug
+        run: |
+          echo "*pwd* running result:"
+          pwd
+          echo "*ls -la* running result:"
+          ls- la
+
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v5.1.0
         env:
