--- a/.github/workflows/rw_run_all_test_and_record.yaml
+++ b/.github/workflows/rw_run_all_test_and_record.yaml
@@ -134,7 +134,7 @@ jobs:
         )
       }}
     needs: build-and-test
-    uses: ./.github/workflows/rw_sonarqube_scan.yaml@v7.3
+    uses: ./.github/workflows/rw_sonarqube_scan.yaml
     secrets:
       sonar_token: ${{ secrets.sonar_token }}
     with:
