✏️ Adjust the triggered conditions of CI workflow.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,6 +11,7 @@ on:
       - ".github/workflows/**ci.yaml"
       - ".github/workflows/rw_build_and_test.yaml"
       - ".github/workflows/rw_uv_run_test.yaml"
+      - ".github/workflows/rw_run_all_test_and_record.yaml"
       - ".github/workflows/rw_uv_run_test_with_multi_py_versions.yaml"
 #     For source code and test
       - "slack_mcp/**/*.py"
@@ -37,7 +38,8 @@ on:
       - ".github/workflows/**ci.yaml"
       - ".github/workflows/rw_build_and_test.yaml"
       - ".github/workflows/rw_uv_run_test.yaml"
-      - "rw_uv_run_test_with_multi_py_versions.yaml"
+      - ".github/workflows/rw_run_all_test_and_record.yaml"
+      - ".github/workflows/rw_uv_run_test_with_multi_py_versions.yaml"
 #     For source code and test
       - "slack_mcp/**/*.py"
       - "!**/__pkg_info__.py"
