✏️ Adjust the path settings of project.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,9 +9,9 @@ sonar.projectName=slack-mcp-server
 sonar.projectVersion=0.0.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.projectBaseDir=./
-sonar.sources=./slack_mcp/
-sonar.tests=./test/
+#sonar.projectBaseDir=./
+sonar.sources=slack_mcp/
+sonar.tests=test/
 
 # Python test coverage settings
 sonar.python.file.suffixes=py
