--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.projectName=slack-mcp-server
 sonar.projectVersion=0.0.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.projectBaseDir=./
+sonar.projectBaseDir=./
 sonar.sources=slack_mcp/
 sonar.tests=test/
 
