--- a/.coveragerc
+++ b/.coveragerc
@@ -1,8 +1,8 @@
 [run]
 parallel = True
 relative_files = True
-source=./slack_mcp/
-#include=./slack_mcp/
+#source=./slack_mcp/
+include=./slack_mcp/
 omit =
 #    */__init__.py
     ./slack_mcp/__main__.py
