Revert "✏️ Fix the incorrect syntax of GitHub Action at reusable workflow usages."
This reverts commit f2d4eccbbf1666a0d6f16fe06ec24e9a68ac3ef2.

--- a/.github/workflows/rw_run_all_test_and_record.yaml
+++ b/.github/workflows/rw_run_all_test_and_record.yaml
@@ -134,7 +134,7 @@ jobs:
         )
       }}
     needs: build-and-test
-    uses: ./.github/workflows/rw_sonarqube_scan.yaml
+    uses: ./.github/workflows/rw_sonarqube_scan.yaml@v7.3
     secrets:
       sonar_token: ${{ secrets.sonar_token }}
     with:
