--- a/pytest.ini
+++ b/pytest.ini
@@ -12,3 +12,8 @@ log_cli = 1
 log_cli_level = INFO
 log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
 log_cli_date_format=%Y-%m-%d %H:%M:%S
+
+# Filter warnings
+filterwarnings =
+    # Ignore coverage warning about --include being ignored
+    ignore:--include is ignored because --source is set
