--- a/.github/workflows/rw_build_and_test.yaml
+++ b/.github/workflows/rw_build_and_test.yaml
@@ -82,7 +82,7 @@ jobs:
 #    name: For unit test, organize and generate the testing report and upload it to Codecov
     if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule'|| (github.event_name == 'push' && github.ref_name == 'master') }}
     needs: run_unit-test
-    uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_organize_test_cov_reports.yaml@v7.3
+    uses: ./.github/workflows/rw_organize_test_cov_reports.yaml
     with:
       test_type: unit-test
 
@@ -90,7 +90,7 @@ jobs:
 #    name: For unit test, organize and generate the testing report and upload it to Codecov
     if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule'|| (github.event_name == 'push' && github.ref_name == 'master') }}
     needs: run_integration-test
-    uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_organize_test_cov_reports.yaml@v7.3
+    uses: ./.github/workflows/rw_organize_test_cov_reports.yaml
     with:
       test_type: integration-test
 
@@ -98,7 +98,7 @@ jobs:
 #    name: For end-to-end test, organize and generate the testing report and upload it to Codecov
     if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule'|| (github.event_name == 'push' && github.ref_name == 'master') }}
     needs: run_e2e-test
-    uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_organize_test_cov_reports.yaml@v7.3
+    uses: ./.github/workflows/rw_organize_test_cov_reports.yaml
     with:
       test_type: e2e-test
 
@@ -106,7 +106,7 @@ jobs:
 #    name: For end-to-end test, organize and generate the testing report and upload it to Codecov
     if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule'|| (github.event_name == 'push' && github.ref_name == 'master') }}
     needs: run_contract-test
-    uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_organize_test_cov_reports.yaml@v7.3
+    uses: ./.github/workflows/rw_organize_test_cov_reports.yaml
     with:
       test_type: contract-test
 
@@ -114,7 +114,7 @@ jobs:
 #    name: Organize and generate the testing report and upload it to Codecov
     if: ${{ (github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule'|| (github.event_name == 'push' && github.ref_name == 'master')) && inputs.run_e2e == false }}
     needs: [run_unit-test, run_integration-test, run_contract-test]
-    uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_organize_test_cov_reports.yaml@v7.3
+    uses: ./.github/workflows/rw_organize_test_cov_reports.yaml
     with:
       test_type: all-test
 
@@ -122,6 +122,6 @@ jobs:
 #    name: Organize and generate the testing report and upload it to Codecov
     if: ${{ (github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule'|| (github.event_name == 'push' && github.ref_name == 'master')) && inputs.run_e2e == true }}
     needs: [run_unit-test, run_integration-test, run_contract-test, run_e2e-test]
-    uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_organize_test_cov_reports.yaml@v7.3
+    uses: ./.github/workflows/rw_organize_test_cov_reports.yaml
     with:
       test_type: all-test
