--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,8 +45,8 @@ Repository = "https://github.com/Chisanan232/slack-mcp-server"
 slack-mcp-server = "slack_mcp.mcp.entry:main"
 slack-webhook-server = "slack_mcp.webhook.entry:main"
 
-[project.entry-points."slack_mcp.queue_backends"]
-#memory = "slack_mcp.backends.memory:MemoryBackend"
+[project.entry-points."slack_mcp.backends.queue"]
+memory = "slack_mcp.backends.queue.memory:MemoryBackend"
 #redis = "slack_mcp_mq_redis.backend:RedisBackend"
 #kafka = "slack_mcp_mq_kafka.backend:KafkaBackend"
 
