✏️ Update the PyTest options to display the missing code lines after run done test.

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,8 @@ minversion = 7.0.0
 addopts =
     --cov=slack_mcp/
     --cov-config=./.coveragerc
+    --cov-report=term-missing
+;    --cov-fail-under=95
     -r a
     -vv
     --reruns 1
