--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,7 @@ updates:
       - "dependencies"
     commit-message:
       prefix: ⬆
+
   # Python
   - package-ecosystem: "uv"
     directory: "/"
@@ -20,5 +21,20 @@ updates:
       - "🔍 enhancement"
       - "🐍 python"
       - "dependencies"
+    commit-message:
+      prefix: ⬆
+
+  # Docusaurus (TSX)
+  - package-ecosystem: "npm"
+    directory: "/docs"
+    schedule:
+      interval: "daily"
+    labels:
+      - "🔍 enhancement"
+      - "👨🏻‍🎨 tsx"
+      - "📑 documentation"
+      - "dependencies"
+    allow:
+      - dependency-type: "development"
     commit-message:
       prefix: ⬆
