✏️ Fix the bug about it would never trigger the document release workflow for git push event type.

--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -46,12 +46,18 @@ jobs:
   # Guard job: Check if documentation files changed and if release workflow succeeded
   check_docs_changes:
     runs-on: ubuntu-latest
-    # Only run for workflow_run events (not direct push events)
-    if: github.event_name == 'workflow_run'
     outputs:
-      should_deploy: ${{ steps.check_changes.outputs.should_deploy }}
+      should_deploy: ${{ steps.check_changes.outputs.should_deploy || steps.set_push_deploy.outputs.should_deploy }}
     steps:
+      - name: Set deployment flag for push events
+        id: set_push_deploy
+        if: github.event_name == 'push'
+        run: |
+          echo "Direct push event detected, proceeding with deployment"
+          echo "should_deploy=true" >> $GITHUB_OUTPUT
+
       - name: Download docs update flag from release workflow
+        if: github.event_name == 'workflow_run'
         uses: actions/download-artifact@v5
         with:
           name: release-docs-flag
@@ -60,6 +66,7 @@ jobs:
 
       - name: Check release workflow success and docs update flag
         id: check_changes
+        if: github.event_name == 'workflow_run'
         run: |
           set -euo pipefail
           
@@ -85,10 +92,8 @@ jobs:
 
   deploy_documentation:
     runs-on: ubuntu-latest
-    # Run for direct push OR workflow_run with docs changes
-    if: |
-      github.event_name == 'push' || 
-      (github.event_name == 'workflow_run' && needs.check_docs_changes.outputs.should_deploy == 'true')
+    # Run based on the check_docs_changes job output (which handles both push and workflow_run events)
+    if: needs.check_docs_changes.outputs.should_deploy == 'true'
     needs: [check_docs_changes]
     steps:
       - name: Checkout
