✏️ Fix the dependency bot error for the Font-End side project dependency checking.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -38,3 +38,27 @@ updates:
       - dependency-type: "development"
     commit-message:
       prefix: ⬆
+    groups:
+      security-patches:
+        applies-to: security-updates
+        patterns:
+          - "*"                  # all the security patches in this group
+        update-types:
+          - "major"
+          - "minor"
+          - "patch"
+
+      tooling:
+        applies-to: version-updates
+        patterns:
+          - "webpack*"
+          - "eslint*"
+          - "vite*"
+          - "mermaid"
+        update-types:
+          - "major"
+          - "minor"
+          - "patch"
+
+    # recommend：let Dependabot modify config package.json directly (not only adjust lockfile)
+    versioning-strategy: increase
